--- a/src/container/Header/Header.css
+++ b/src/container/Header/Header.css
@@ -1,5 +1,6 @@
 .app__header {
   background-color: var(--color-black);
+  padding-top: 2rem;
 }
 
 .app__header-h1 {
